[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "reportlab>=4.3.1",
    "streamlit>=1.42.2",
    "trafilatura>=2.0.0",
]
